corpus/funcs.txt
==================
Return statements
==================
func x()
return 1
---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (return_statement (number))))

==================
params and expression
==================
func x(a,b)
return a+b*5
---

(source_file
  (function_definition
    (identifier)
    (parameter_list (identifier) (identifier))
    (return_statement 
      (binary_expression (identifier) 
        (binary_expression (identifier) (number))))))

==================
local and statement
==================
func funName(a,b)
  local x
  x:=b*5
return a+x
---

(source_file
  (function_definition
    (identifier)
    (parameter_list (identifier) (identifier))
    (local_list (identifier))
    (assignment_statement (identifier) 
      (binary_expression (identifier) (number)))
    (return_statement 
      (binary_expression (identifier) (identifier)))))

==================
local assignement
==================
proc funName()
  local x := 4, y, z:= 5
return
---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (local_list 
      (assignment_statement (identifier) (number)) 
      (identifier) 
      (assignment_statement (identifier) (number)))
    (return_statement)))

==================
semicolon
==================
proc swap(param1, ;
          param2)
  local x
  x:=param2 ; param2:=param1; param1:=x
return
---
(source_file
  (function_definition (identifier)
    (parameter_list (identifier) (semicolonContinueline) (identifier))
    (local_list (identifier ))
    (assignment_statement (identifier) (identifier))
    (semicolonSeparator)
    (assignment_statement (identifier) (identifier))
    (semicolonSeparator)
    (assignment_statement (identifier) (identifier))
    (return_statement)
))
